added draft. giving up for now.

--- a/content/post/adventures-in-metadata.Rmd
+++ b/content/post/adventures-in-metadata.Rmd
@@ -3,6 +3,7 @@ title: Adventures in metadata ...
 author: Drew Tyre
 date: '2017-12-07'
 slug: adventures-in-metadata
+draft: true
 summary: "Metadata are good. Everyone should create metadata. But writing raw XML is bad. rOpenSci created the EML package to make this easier."
 categories:
   - R
