--- a/content/post/nutrient-cycling.Rmd
+++ b/content/post/nutrient-cycling.Rmd
@@ -14,6 +14,7 @@ I set up 4 10 gallon aquaria in the teaching lab this semester. The goal was to 
 
 ```{r setup, message=FALSE}
 library(tidyverse)
+library(stringr)
 aq <- read_csv("https://ndownloader.figshare.com/files/9932452")
 # fix missing column name
 names(aq)[14] <- "Flag_NO3"
@@ -28,6 +29,24 @@ aq2 <- gather(aq, key = nutrient, value = conc, NH4, NO2, NO3, P)
 That's not quite right because I also need the data quality flag variables to be copied in the right places. Hmmm. I got the general strategy from [StackOverflow](https://stackoverflow.com/questions/23945350/reshaping-wide-to-long-with-multiple-values-columns?noredirect=1&lq=1).
 
 ```{r}
+aq2 <- select(aq, -Comment, -Team) %>% 
+  gather(key = variable, value = value, 8:15) %>% # gather *all* the things
+  mutate(flag = ifelse(str_detect(variable, "Flag"), "Flag", "Data"),
+         variable = ifelse(str_detect(variable, "Flag"), 
+                           str_sub(variable, start=6), 
+                           variable)) %>% 
+  spread(key = flag, value = value) %>%
+  filter(Flag %in% c("Good", "Out-of-range")) %>%
+  mutate(Date = lubridate::ymd(paste(Year, Month, Day, sep="-")))
+```
 
+That got more involved because I needed to extract the "nutrient" part of `variable`. OK, let's see what happened. 
+
+```{r}
+ggplot(data = aq2,
+       mapping = aes(x = Date, y = Data)) + 
+  geom_point(mapping = aes(shape=Flag, color=variable)) + 
+  geom_line(mapping = aes(color=variable)) +
+  facet_wrap(~Tank)
 ```
 
