--- a/content/post/nutrient-cycling.Rmd
+++ b/content/post/nutrient-cycling.Rmd
@@ -36,8 +36,12 @@ aq2 <- select(aq, -Comment, -Team) %>%
                            str_sub(variable, start=6), 
                            variable)) %>% 
   spread(key = flag, value = value) %>%
-  filter(Flag %in% c("Good", "Out-of-range")) %>%
-  mutate(Date = lubridate::ymd(paste(Year, Month, Day, sep="-")))
+  filter(Flag %in% c("Good", "Out-of-range"),
+         variable != "P") %>%
+  mutate(Date = lubridate::ymd(paste(Year, Month, Day, sep="-")),
+         Data = as.numeric(Data),
+         Tank = factor(Tank)) %>%
+  arrange(Tank, variable, Date)
 ```
 
 That got more involved because I needed to extract the "nutrient" part of `variable`. OK, let's see what happened. 
@@ -45,8 +49,16 @@ That got more involved because I needed to extract the "nutrient" part of `varia
 ```{r}
 ggplot(data = aq2,
        mapping = aes(x = Date, y = Data)) + 
-  geom_point(mapping = aes(shape=Flag, color=variable)) + 
-  geom_line(mapping = aes(color=variable)) +
-  facet_wrap(~Tank)
+  geom_point(mapping = aes(shape=Flag, color=Tank)) + 
+  geom_line(mapping = aes(color=Tank, group=Tank)) +
+  facet_wrap(~variable, scales = "free_y") + 
+  scale_color_discrete(name = "",
+                      breaks = c("4","1","2","3"),
+                      labels = c("No snails","1 snail", "3 snails", "6 snails")) + 
+  labs(x = "", y = "Concentration [mg / L]",
+       caption = str_wrap("Nutrient dynamics in 10 gallon aquaria with different numbers of snails. Data collected by UNL NRES 222 students, Fall 2017."))
 ```
 
+The only tank that did what I expected was the 1 snail treatment. Ammonia rises then falls as nitrifying bacteria ramp up. Nitrite rises, and if I'd gone on longer, presumably falls again. Nitrates start to rise and rise. I'd expected nothing to happen in the no snails treatment, but maybe there was enough Ammonium in the tap water that it drove the nitrogen cycle anyway. In the other two treatments the snails mostly died. Bad batch of snails I guess. 
+
+It looks like this could work as a lab experiment. Better snails, and maybe better quality water. Using the one snail tank as a guide, looks like samples a week apart would capture the process. 
