--- a/content/post/nutrient-cycling.Rmd
+++ b/content/post/nutrient-cycling.Rmd
@@ -2,7 +2,7 @@
 title: Nutrient Cycling?
 author: Drew Tyre
 date: '2017-12-07'
-draft: true
+draft: false
 slug: nutrient-cycling
 summary: "I set up 4 10 gallon aquaria in the teaching lab this semester. The goal was to observe the nitrogen cycle as the tanks settled in. I also needed an excuse to try out the new Hach environmental water testing kit that we ordered. The data are on figshare."
 categories:
@@ -13,7 +13,7 @@ tags: []
 
 I set up 4 10 gallon aquaria in the teaching lab this semester. The goal was to observe the nitrogen cycle as the tanks settled in. I also needed an excuse to try out the new Hach environmental water testing kit that we ordered. The data are on figshare.
 
-```{r setup, message=FALSE}
+```{r setup, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(stringr)
 aq <- read_csv("https://ndownloader.figshare.com/files/9932452")
@@ -29,7 +29,7 @@ aq2 <- gather(aq, key = nutrient, value = conc, NH4, NO2, NO3, P)
 
 That's not quite right because I also need the data quality flag variables to be copied in the right places. Hmmm. I got the general strategy from [StackOverflow](https://stackoverflow.com/questions/23945350/reshaping-wide-to-long-with-multiple-values-columns?noredirect=1&lq=1).
 
-```{r}
+```{r data_munge}
 aq2 <- select(aq, -Comment, -Team) %>% 
   gather(key = variable, value = value, 8:15) %>% # gather *all* the things
   mutate(flag = ifelse(str_detect(variable, "Flag"), "Flag", "Data"),
@@ -47,7 +47,7 @@ aq2 <- select(aq, -Comment, -Team) %>%
 
 That got more involved because I needed to extract the "nutrient" part of `variable`. OK, let's see what happened. 
 
-```{r}
+```{r nice_figure}
 ggplot(data = aq2,
        mapping = aes(x = Date, y = Data)) + 
   geom_point(mapping = aes(shape=Flag, color=Tank)) + 
