--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -22,5 +22,8 @@ Surely there will be negative consequences?
 
 Which is entirely the point. There could be, and there shouldn't be. It's no different from saying I'm a Type 2 diabetic. 
 It is a chronic condition that affects my behavior and life expectancy. Also, for the same reason, I should speak up. 
-If I can't weather the blow back (if any) as a cisgender heterosexual white male fully promoted professor, then there really *is* a problem. The privilege is leaking out of my ears. 
+If I can't weather the blow back (if any) as a atheist cisgender heterosexual white male fully promoted professor, then there really *is* a problem. The privilege is leaking out of my ears.
+Still, its taken me more than a year to get to the point where I could write this.
+
+
 
