--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -23,7 +23,19 @@ Surely there will be negative consequences?
 Which is entirely the point. There could be, and there shouldn't be. It's no different from saying I'm a Type 2 diabetic. 
 It is a chronic condition that affects my behavior and life expectancy. Also, for the same reason, I should speak up. 
 If I can't weather the blow back (if any) as a atheist cisgender heterosexual white male fully promoted professor, then there really *is* a problem. The privilege is leaking out of my ears.
-Still, its taken me more than a year to get to the point where I could write this.
+Still, its taken me a long time to get to the point where I could write this. 
+
+When I read about others' experience of mental health issues, I'm blown away by the terrible situations that develop. 
+My own situation is so priveleged, I often think "how can I complain?" 
+I should just suck it up. 
+But I can't. It is an illness. 
+Yes, there is a lot of personal work that I can, and am, doing to improve my mental state. 
+But there's no switch I can flip, no magic bullet. 
+I take medication, and that helps. A lot. But it isn't enough.
+The medication helps me put a floor on how far I can fall when things go bad. 
+
+I'm not going to try and describe what it's like to be in the grip of depression. 
+I could never do as well as [Andrew Solomon's TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.  
 
 
 
