--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -35,7 +35,20 @@ I take medication, and that helps. A lot. But it isn't enough.
 The medication helps me put a floor on how far I can fall when things go bad. 
 
 I'm not going to try and describe what it's like to be in the grip of depression. 
-I could never do as well as [Andrew Solomon's TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.  
+I could never do as well as [Andrew Solomon's TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). 
+Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.  
 
+
+In 2012, three years after getting tenure, I was at the peak of my career. 
+I had brought in some big(-ish) grants, my students were successful, papers were churning out and I had some stimulating collaborations. 
+Then I just fell apart. More or less. 
+I vividly recall sitting in the parking lot of my building one day, calling a collaborator and saying I couldn't make a meeting. 
+I couldn't do anything except sit there and cry. 
+Luckily UNL has some good employee assisstance program, and I had visited with a counselor a few years before to talk about stress management. 
+The counselor diagnosed me as clinically depressed in a few minutes. 
+
+TIL: it is not normal to think about suicide on a daily basis. Who knew! I sure didn't. 
+Now I know that those thoughts are just symptoms. 
+I treat them as such, just like measuring a high glucose reading is a symptom that my diet isn't controlling my diabetes. 
 
 
