What do I want to communicate here anyway?

--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -20,10 +20,12 @@ Last fall I told my boss.
 Now I'm telling everyone! 
 Surely there will be negative consequences?
 
-Which is entirely the point. There could be, and there shouldn't be. It's no different from saying I'm a Type 2 diabetic. 
+Which is entirely the point. There could be, and there shouldn't be. It's no different from saying I'm a Type 2 diabetic.[^1] 
 It is a chronic condition that affects my behavior and life expectancy. Also, for the same reason, I should speak up. 
 If I can't weather the blow back (if any) as a atheist cisgender heterosexual white male fully promoted professor, then there really *is* a problem. The privilege is leaking out of my ears.
 Still, its taken me a long time to get to the point where I could write this. 
+
+[^1]: I am!
 
 When I read about others' experience of mental health issues, I'm blown away by the terrible situations that develop. 
 My own situation is so priveleged, I often think "how can I complain?" 
@@ -32,23 +34,28 @@ But I can't. It is an illness.
 Yes, there is a lot of personal work that I can, and am, doing to improve my mental state. 
 But there's no switch I can flip, no magic bullet. 
 I take medication, and that helps. A lot. But it isn't enough.
-The medication helps me put a floor on how far I can fall when things go bad. 
+The medication helps me put a floor on how far I fall when things go bad. 
 
 I'm not going to try and describe what it's like to be in the grip of depression. 
 I could never do as well as [Andrew Solomon's TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). 
 Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.  
 
-
 In 2012, three years after getting tenure, I was at the peak of my career. 
-I had brought in some big(-ish) grants, my students were successful, papers were churning out and I had some stimulating collaborations. 
+I had brought in some big(-ish) grants, my students were successful, papers were churning out and I had stimulating collaborations. 
 Then I just fell apart. More or less. 
 I vividly recall sitting in the parking lot of my building one day, calling a collaborator and saying I couldn't make a meeting. 
 I couldn't do anything except sit there and cry. 
-Luckily UNL has some good employee assisstance program, and I had visited with a counselor a few years before to talk about stress management. 
+Luckily UNL has some good employee assistance program, and I had visited with a counselor a few years before to talk about stress management. 
 The counselor diagnosed me as clinically depressed in a few minutes. 
 
 TIL: it is not normal to think about suicide on a daily basis. Who knew! I sure didn't. 
 Now I know that those thoughts are just symptoms. 
 I treat them as such, just like measuring a high glucose reading is a symptom that my diet isn't controlling my diabetes. 
+$Suicidal thoughts / day > 0$ is a sign something is off.
+In hindsight, it's a good thing I've never owned a gun.
+I'm also incredibly lucky to have a loving family. 
+Thinking about what my suicide would do to them kept me alive. 
 
-
+In hindsight, it seems pretty clear that I was experiencing depression for many years prior to that total collapse. 
+Maybe I'd have spotted it sooner if mental illness was more widely discussed and acknowledged.
+I might have thought to ask my physician about a normal frequency of suicidal thoughts (zero!). 
