--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -45,7 +45,7 @@ I had brought in some big(-ish) grants, my students were successful, papers were
 Then I just fell apart. More or less. 
 I vividly recall sitting in the parking lot of my building one day, calling a collaborator and saying I couldn't make a meeting. 
 I couldn't do anything except sit there and cry. 
-Luckily UNL has some good employee assistance program, and I had visited with a counselor a few years before to talk about stress management. 
+Luckily UNL has a good employee assistance program, and I had visited with a counselor a few years before to talk about stress management. 
 The counselor diagnosed me as clinically depressed in a few minutes. 
 
 TIL: it is not normal to think about suicide on a daily basis. Who knew! I sure didn't. 
