typos and new paragraph

--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -28,7 +28,7 @@ Still, its taken me a long time to get to the point where I could write this.
 [^1]: I am!
 
 When I read about others' experience of mental health issues, I'm blown away by the terrible situations that develop. 
-My own situation is so priveleged, I often think "how can I complain?" 
+My own situation is so privileged, I often think "how can I complain?" 
 I should just suck it up. 
 But I can't. It is an illness. 
 Yes, there is a lot of personal work that I can, and am, doing to improve my mental state. 
@@ -59,3 +59,16 @@ Thinking about what my suicide would do to them kept me alive.
 In hindsight, it seems pretty clear that I was experiencing depression for many years prior to that total collapse. 
 Maybe I'd have spotted it sooner if mental illness was more widely discussed and acknowledged.
 I might have thought to ask my physician about a normal frequency of suicidal thoughts (zero!). 
+
+I told my Facebook friends I was experiencing a relapse last year. 
+A colleague was surprised, and wrote "You've always seems one of the most well balanced people I've known."
+Which was a great compliment, and I said thanks! 
+But, outward appearances are deceiving.  
+Even in the grip of the deepest depression I can walk into a room full of people and lead a meeting. 
+But in my office? 
+I stare at the wall. 
+During those times I live for emails. If someone asks me for something I can do it! 
+Someone else needs this right now! 
+But my own work, or more distant tasks like grading all those low-stakes lab assignments? 
+They sit undone.
+
