--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -9,7 +9,11 @@ categories:
 tags:
 ---
 
-Mental health is a huge issue in academia right now (see this, this, or this, or that). 
+Mental health is a huge issue in academia right now (see 
+[this](https://www.theatlantic.com/education/archive/2016/07/why-do-so-many-graduate-students-quit/490094/), 
+[this](https://dynamicecology.wordpress.com/2016/07/13/life-as-an-anxious-scientist/), or 
+[this](https://www.theguardian.com/society/2017/may/23/number-university-dropouts-due-to-mental-health-problems-trebles?CMP=Share_iOSApp_Other), or 
+that). 
 Many say the most important thing to normalize this, to get over thinking of it as stigma, is to own up to it.
 And so to do my bit, I suffer clinical depression. 
 
@@ -37,8 +41,10 @@ I take medication, and that helps. A lot. But it isn't enough.
 The medication helps me put a floor on how far I fall when things go bad. 
 
 I'm not going to try and describe what it's like to be in the grip of depression. 
-I could never do as well as [Andrew Solomon's TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). 
-Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.  
+I could never do as well as 
+[Andrew Solomon's TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). 
+Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.
+Or [this great essay by Katie Rose Guest Pryal](https://chroniclevitae.com/news/1203-working-when-your-brain-isn-t)
 
 In 2012, three years after getting tenure, I was at the peak of my career. 
 I had brought in some big(-ish) grants, my students were successful, papers were churning out and I had stimulating collaborations. 
@@ -72,3 +78,8 @@ Someone else needs this right now!
 But my own work, or more distant tasks like grading all those low-stakes lab assignments? 
 They sit undone.
 
+Sitting here in my privileged bubble, having dug out of another fight with Churchill's Black Dog, I've been asking "what can I do to make things better?". 
+This essay is one thing. 
+Together with a few colleagues who also experience mental health issues, I've been looking around for ways to support students. We've added lists of resources to our course homepages, posted signs on doors indicating we are willing to listen, and ... 
+I recently learned there is a UNL chapter of [Active Minds](http://www.activeminds.org/), an organization advocating for mental health on campus. 
+All seems like weak tea. 
