--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -34,10 +34,11 @@ Still, its taken me a long time to get to the point where I could write this.
 
 In 2012, three years after getting tenure, I was at the peak of my career. 
 I had brought in some big(-ish) grants, my students were successful, papers were churning out and I had stimulating collaborations. 
+My children were growing, healthy, happy (as far as I could tell!), and my spouse's career was also going well. 
 Then I just fell apart. More or less. 
 I vividly recall sitting in the parking lot of my building one day, calling a collaborator and saying I couldn't make a meeting. 
 I couldn't do anything except sit there and cry. 
-Luckily UNL has a good employee assistance program, and I had visited with a counselor a few years before to talk about stress management. 
+Luckily UNL has a employee assistance program. I had visited with a counselor a few years before to talk about stress management, and felt comfortable calling for an appointment. 
 The counselor diagnosed me as clinically depressed in a few minutes. 
 
 TIL: it is not normal to think about suicide on a daily basis. Who knew! I sure didn't. 
@@ -48,6 +49,12 @@ In hindsight, it's a good thing I've never owned a gun.
 I'm also incredibly lucky to have a loving family. 
 Thinking about what my suicide would do to them kept me alive. 
 
+I'm not going to try and describe what it's like to be in the grip of depression. 
+I could never do as well as 
+[Andrew Solomon's TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). 
+Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.
+Or [this great essay by Katie Rose Guest Pryal](https://chroniclevitae.com/news/1203-working-when-your-brain-isn-t)
+
 When I read about others' experience of mental health issues, I'm blown away by the terrible situations that develop. 
 My own situation is so privileged, I often think "how can I complain?" 
 I should just suck it up. 
@@ -56,12 +63,9 @@ Yes, there is a lot of personal work that I can, and am, doing to improve my men
 But there's no switch I can flip, no magic bullet. 
 I take medication, and that helps. A lot. But it isn't enough.
 The medication helps me put a floor on how far I fall when things go bad. 
+I practice mindfulness meditation. 
+I exercise. 
 
-I'm not going to try and describe what it's like to be in the grip of depression. 
-I could never do as well as 
-[Andrew Solomon's TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). 
-Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.
-Or [this great essay by Katie Rose Guest Pryal](https://chroniclevitae.com/news/1203-working-when-your-brain-isn-t)
 
 In hindsight, it seems pretty clear that I was experiencing depression for many years prior to that total collapse. 
 Maybe I'd have spotted it sooner if mental illness was more widely discussed and acknowledged.
@@ -81,7 +85,13 @@ They sit undone.
 
 Sitting here in my privileged bubble, having dug out of another fight with Churchill's Black Dog, I've been asking "what can I do to make things better?". 
 This essay is one thing. 
-Together with a few colleagues who also experience mental health issues, I've been looking around for ways to support students. We've added lists of resources to our course homepages, posted signs on doors indicating we are willing to listen, and ... 
+Together with a few colleagues who also experience mental health issues, I've been looking around for ways to support students. We've added lists of resources to our course homepages and posted signs on doors indicating we are willing to listen.
+Meghan Duffy[^2] posted [about supporting students with mental illness at Dynamic Ecology](https://dynamicecology.wordpress.com/2018/01/29/how-to-support-undergraduate-students-experiencing-mental-health-concerns/).
 I recently learned there is a UNL chapter of [Active Minds](http://www.activeminds.org/), an organization advocating for mental health on campus. 
 
-All seems like weak tea. 
+[^2]: Her [post on anxiety](https://dynamicecology.wordpress.com/2016/07/13/life-as-an-anxious-scientist/) prompted me to start thinking about this one.
+
+Just today I found my equilibrium knocked askew, negative thoughts boiling up like storm clouds. 
+Take some deep breaths -- mindfully watch the clouds roll by. There is always blue sky up above. 
+
+
