Incorporating most of Pete and Lisa's comments

--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -13,78 +13,79 @@ tags:
 draft: yes
 ---
 
-Mental health is a huge issue in academia right now (see 
+Mental health is a growing issue in academia right now (see 
 [this](https://www.theatlantic.com/education/archive/2016/07/why-do-so-many-graduate-students-quit/490094/), 
 [this](https://dynamicecology.wordpress.com/2016/07/13/life-as-an-anxious-scientist/), or 
 [this](https://www.theguardian.com/society/2017/may/23/number-university-dropouts-due-to-mental-health-problems-trebles?CMP=Share_iOSApp_Other), or 
 that). 
 Many say the most important thing to normalize this, to get over thinking of it as stigma, is to own up to it.
-And so to do my bit, I suffer clinical depression. 
+And so to do my bit, I suffer from clinical depression. 
 
 Before I go any farther, *right now*, I am doing very well, thank you.
 
-Some close to me were alarmed that I would tell people about experiencing depression. 
+Some close to me are alarmed when I tell people about experiencing depression. 
 Last fall I told my boss. 
 Now I'm telling everyone! 
 Surely there will be negative consequences?
 
-Which is entirely the point. There could be, and there shouldn't be. It's no different from saying I'm a Type 2 diabetic.[^1] 
-It is a chronic condition that affects my behavior and life expectancy. Also, for the same reason, I should speak up. 
-If I can't weather the blow back (if any) as a atheist cisgender heterosexual white male fully promoted professor, then there really *is* a problem. The privilege is leaking out of my ears.
+Which is entirely the point. There could be, but there shouldn't be. It's no different from saying I'm a Type 2 diabetic.[^1] 
+It is a chronic condition that affects my behavior and life expectancy. For the same reason, I should speak up. 
+If I can't weather the blow back (if any) as an atheist, cisgender, heterosexual, white, male, fully promoted professor, then there really *is* a problem. Privilege is leaking out of my ears.
 Still, its taken me a long time to get to the point where I could write this. 
 
 [^1]: I am!
 
 In 2012, three years after getting tenure, I was at the peak of my career. 
-I had brought in some big(-ish) grants, my students were successful, papers were churning out and I had stimulating collaborations. 
+I had brought in some big(-ish) grants, my students were successful, papers were churning out, and I had stimulating collaborations. 
 My children were growing, healthy, happy (as far as I could tell!), and my spouse's career was also going well. 
 Then I just fell apart. More or less. 
 I vividly recall sitting in the parking lot of my building one day, calling a collaborator and saying I couldn't make a meeting. 
 I couldn't do anything except sit there and cry. 
-Luckily UNL has a employee assistance program. I had visited with a counselor a few years before to talk about stress management, and felt comfortable calling for an appointment. 
-The counselor diagnosed me as clinically depressed in a few minutes. 
+Luckily I was familiar with UNL's employee assistance program. I visited with a counselor a few years before to talk about stress management, and felt comfortable calling for an appointment. 
+Within a few minutes, the counselor diagnosed me as clinically depressed. 
 
-TIL: it is not normal to think about suicide on a daily basis. Who knew! I sure didn't. 
+TIL: it is not normal to think about suicide or dying on a daily basis. Who knew! I sure didn't. 
 Now I know that those thoughts are just symptoms. 
 I treat them as such, just like measuring a high glucose reading is a symptom that my diet isn't controlling my diabetes. 
 $Suicidal thoughts / day > 0$ is a sign something is off.
-In hindsight, it's a good thing I've never owned a gun.
-I'm also incredibly lucky to have a loving family. 
+I'm incredibly lucky to have a loving family --
 Thinking about what my suicide would do to them kept me alive. 
 
 I'm not going to try and describe what it's like to be in the grip of depression. 
-I could never do as well as 
-[Andrew Solomon's TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). 
+I could not describe it as well as 
+[Andrew Solomon in his TED talk](https://www.ted.com/talks/andrew_solomon_depression_the_secret_we_share?utm_campaign=tedspread--a&utm_medium=referral&utm_source=tedcomshare). 
 Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.
 Or [this great essay by Katie Rose Guest Pryal](https://chroniclevitae.com/news/1203-working-when-your-brain-isn-t)
 
 When I read about others' experience of mental health issues, I'm blown away by the terrible situations that develop. 
 My own situation is so privileged, I often think "how can I complain?" 
 I should just suck it up. 
-But I can't. It is an illness. 
-Yes, there is a lot of personal work that I can, and am, doing to improve my mental state. 
+That kind of thinking is part of the problem!
+I can't just suck it up. It is an illness. 
+Yes, there is a lot of personal work that I can and am doing to improve my mental state. 
 But there's no switch I can flip, no magic bullet. 
 I take medication, and that helps. A lot. But it isn't enough.
 The medication helps me put a floor on how far I fall when things go bad. 
+I regularly meet with a mental health professional.
 I practice mindfulness meditation. 
 I exercise. 
 Late last year I made some tough decisions about what I could and couldn't continue to do. 
 Cutting back created the space for me to start healing again. 
 But telling colleagues that some things were not going to happen was the hardest thing I've had to do for a long time. 
 
-In hindsight, it seems pretty clear that I was experiencing depression for many years prior to that total collapse. 
+In hindsight, it is pretty clear I was experiencing depression for many years prior to that total collapse. 
 Maybe I'd have spotted it sooner if mental illness was more widely discussed and acknowledged.
-I might have thought to ask my physician about a normal frequency of suicidal thoughts (zero!). 
+I might have thought to ask my physician about the normal frequency of suicidal thoughts (zero!). 
 
 I told my Facebook friends I was experiencing a relapse last year. 
-A colleague was surprised, and wrote "You've always seems one of the most well balanced people I've known."
+A colleague was surprised, and wrote "You've always seemed one of the most well balanced people I've known."
 Which was a great compliment, and I said thanks! 
 But, outward appearances are deceiving. 
 Even in the grip of the deepest depression I can walk into a room full of people and lead a meeting. 
 But in my office? 
 I stare at the wall. 
-During those times I live for emails. If someone asks me for something I can do it! 
-Someone else needs this right now! 
+Some people wear their depression on their sleeves. 
+You can tell they are suffering.
 But my own work, or more distant tasks like grading all those low-stakes lab assignments? 
 They sit undone.
 
