--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -16,9 +16,11 @@ draft: yes
 Mental health is a growing issue in academia right now (see 
 [this](https://www.theatlantic.com/education/archive/2016/07/why-do-so-many-graduate-students-quit/490094/), 
 [this](https://dynamicecology.wordpress.com/2016/07/13/life-as-an-anxious-scientist/), or 
-[this](https://www.theguardian.com/society/2017/may/23/number-university-dropouts-due-to-mental-health-problems-trebles?CMP=Share_iOSApp_Other), or 
-that). 
-Many say the most important thing to normalize this, to get over thinking of it as stigma, is to own up to it.
+[this](https://www.theguardian.com/society/2017/may/23/number-university-dropouts-due-to-mental-health-problems-trebles?CMP=Share_iOSApp_Other). 
+[Faculty suffer mental illness too](https://www.insidehighered.com/news/2017/06/08/study-faculty-members-mental-health-issues-finds-mix-attitudes-disclosing-and), and many do not seek help from their institutions.
+The fear that disclosure, even to the disability office, will have negative effects on one's professional career is a common reason for not seeking help.
+I believe normalizing mental illness and disability could eliminate the stigma, reduce the fear, and get more people the help they need.
+
 And so to do my bit, I suffer from clinical depression. 
 
 Before I go any farther, *right now*, I am doing very well, thank you.
@@ -66,7 +68,9 @@ Yes, there is a lot of personal work that I can and am doing to improve my menta
 But there's no switch I can flip, no magic bullet. 
 I take medication, and that helps. A lot. But it isn't enough.
 The medication helps me put a floor on how far I fall when things go bad. 
-I regularly meet with a mental health professional.
+I regularly meet with a mental health professional. The combination of counseling and medication is more effective than either alone 
+(see [this](https://well.blogs.nytimes.com/2015/01/08/to-treat-depression-drugs-or-therapy/) or
+[this](https://news.vanderbilt.edu/2014/08/20/drugs-therapy-nonchronic-depression/)).
 I practice mindfulness meditation. 
 I exercise. 
 Late last year I made some tough decisions about what I could and couldn't continue to do. 
@@ -84,21 +88,21 @@ But, outward appearances are deceiving.
 Even in the grip of the deepest depression I can walk into a room full of people and lead a meeting. 
 But in my office? 
 I stare at the wall. 
+My own work, or more distant tasks like grading all those low-stakes lab assignments, sit undone.
 Some people wear their depression on their sleeves. 
 You can tell they are suffering.
-But my own work, or more distant tasks like grading all those low-stakes lab assignments? 
-They sit undone.
+But others, like me, show nothing. We're still suffering.
 
 Sitting here in my privileged bubble, having dug out of another fight with Churchill's Black Dog, I've been asking "what can I do to make things better?". 
 This essay is one thing. 
 Together with a few colleagues who also experience mental health issues, I've been looking around for ways to support students. We've added lists of resources to our course homepages and posted signs on doors indicating we are willing to listen.
-Meghan Duffy[^2] posted [about supporting students with mental illness at Dynamic Ecology](https://dynamicecology.wordpress.com/2018/01/29/how-to-support-undergraduate-students-experiencing-mental-health-concerns/).
+Meghan Duffy posted [about supporting students with mental illness at Dynamic Ecology](https://dynamicecology.wordpress.com/2018/01/29/how-to-support-undergraduate-students-experiencing-mental-health-concerns/).
 I recently learned there is a UNL chapter of [Active Minds](http://www.activeminds.org/), an organization advocating for mental health on campus. 
-
-[^2]: Her [post on anxiety](https://dynamicecology.wordpress.com/2016/07/13/life-as-an-anxious-scientist/) prompted me to start thinking about this one.
+It is for students, but I'll keep an eye on their activities and support what I can.
+There is also [a report on supporting faculty with mental health issues](http://tucollaborative.org/sdm_downloads/supportive-academic-environments-for-faculty-with-mental-illnesses/) that I need to dig into.
 
 Just today I found my equilibrium knocked askew, negative thoughts boiling up like storm clouds. 
 Take some deep breaths -- mindfully watch the clouds roll by. There is always blue sky up above. 
-Above all else, be kind.
+Above all else, be kind, especially to myself.
 
 
